<resources>
    <string name="app_name">ASCII Helper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_all">Wszystko</string>
    <string name="nav_big">Duże litery</string>
    <string name="nav_small">Małe litery</string>
    <string name="nav_another">Inne znaki</string>
    <string name="nav_pl">Polskie znaki</string>
    <string name="nav_converter">Konwerter</string>
    <string name="nav_converter_hex">Przelicznik hexadecymalny</string>
    <string name="nav_converter_dec">Przelicznik decymalny</string>
    <string name="nav_converter_bin">Przelicznik binarny</string>

    <string name="drawer_up">Pomocnik ASCII</string>
    <string name="drawer_down">Tablice i konwerter</string>

    <string name="hint">Liczba</string>
    <string name="space">spacja</string>
    <string name="char_str">Znak</string>
    <string name="dec">Dec</string>
    <string name="hex">Hex</string>
    <string name="bin">Bin</string>
    <string name="tab">tabulacja</string>
    <string name="table_char">Znak</string>
    <string name="table_dec">Dec</string>
    <string name="table_hex">Hex</string>
    <string name="table_bin">Bin</string>
    <string name="bin_0">Bin: 0</string>
    <string name="hex_0">Hex: 0</string>
    <string name="dec_0">Dec: 0</string>
    <string name="bin_s">"Bin: %1$s"</string>
    <string name="hex_s">"Hex: %1$s"</string>
    <string name="dec_s">"Dec: %1$s"</string>

</resources>
